# bg

./: README.md  amd-main.rs  bg  bg.sh  install.sh  intel-main.rs
amd/: Cargo.toml  bg  install.sh
amd/src/: main.rs
intel/: bg  install.sh
intel/src/: main.rs
